v2.0.x/site/en/userGuide/user_guide.md
---
id: user_guide.md
title: User Guide
---

# User Guide

Follow the step-by-step instructions to learn about the basic database features that Milvus has to offer. 

- [Manage Milvus Connections](manage_connection.md): Learn how to connect to or disconnect from a Milvus server.

- [Manage collections](manage_collections.md): A Milvus collection is similar to a table in traditional databases and is used to store and manage data. Learn about the collection-level operations.

- [Manage Partitions](manage_partitions.md): A partition is a division of a collection. Learn about the partition-level operations.

- [Manage Data](manage_data.md): Learn how to insert, delete, and compact data in Milvus.

- [Manage Indexes](manage_indexes.md): Learn how to build or drop indexes.

- [Search and Query](search_and_query.md): Learn how to conduct a vector similarity search, a vector query, or a hybrid search by pairing up vector similarity search with attribute filtering.

- [Search with Time Travel](timetravel.md): Learn how to utilize Time Travel to query, restore, and back up data in the past.

- [Calculate Distance](calculate_distance.md): Learn how to calculate vector distances with the parameters you specify. 

- [Bootcamp](https://milvus.io/bootcamp/): Hands-on instructions on how to build similarity search applications with Milvus.

